objects/Loop__PDF_Stamp__c.object
<CustomObject>
    <fields>
        <fullName>Loop__Background_Color__c</fullName>
        <label>Background Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Background_Padding__c</fullName>
        <inlineHelpText>Number of pixels of padding to add of the Background Color behind the text.</inlineHelpText>
        <label>Background Padding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__DDP_Files__c</fullName>
        <inlineHelpText>Merged - stamp entire merged PDF as a whole. All - stamp all PDFs individually. Select individual files to stamp them separately.</inlineHelpText>
        <label>DDP Files</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__DDP__c</fullName>
        <label>DDP</label>
        <referenceTo>Loop__DDP__c</referenceTo>
        <relationshipLabel>PDF Stamps</relationshipLabel>
        <relationshipName>PDF_Stamps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loop__Delivery_Methods__c</fullName>
        <label>Delivery Methods</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__FontSize__c</fullName>
        <label>Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__Font__c</fullName>
        <label>Font</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Helvetica Bold</fullName>
                </value>
                <value>
                    <fullName>Helvetica Bold Oblique</fullName>
                </value>
                <value>
                    <fullName>Helvetica Oblique</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Courier Bold</fullName>
                </value>
                <value>
                    <fullName>Courier Bold Oblique</fullName>
                </value>
                <value>
                    <fullName>Courier Oblique</fullName>
                </value>
                <value>
                    <fullName>Symbol</fullName>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Times Bold</fullName>
                </value>
                <value>
                    <fullName>Times Bold Italic</fullName>
                </value>
                <value>
                    <fullName>Times Italic</fullName>
                </value>
                <value>
                    <fullName>Times Roman</fullName>
                </value>
                <value>
                    <fullName>Zapf Dingbats</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__HAlign__c</fullName>
        <label>Horizontal Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__Opacity__c</fullName>
        <inlineHelpText>Percentage of opacity (default is 100% opaque)</inlineHelpText>
        <label>Opacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loop__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__Pages__c</fullName>
        <inlineHelpText>Specify the pages to be stamped. Use a dash to indicate a range, use commas to separate pages or ranges, or enter Odd or Even (e.g. 1-5,8,10-12). A blank value will stamp all pages.</inlineHelpText>
        <label>Pages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__RGB_Color__c</fullName>
        <inlineHelpText>The 6 character RGB code for the text color of the stamp. (Default: black)</inlineHelpText>
        <label>Text Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Rotation__c</fullName>
        <inlineHelpText>Number in degrees (0 to 360)</inlineHelpText>
        <label>Rotation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__Scale_By__c</fullName>
        <label>Scale By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Pixel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Stamp_Text__c</fullName>
        <inlineHelpText>Text to stamp onto the PDF. Use [[page]] for the current page number; use [[total pages]] for the total number of pages; [[bookmark]], [[sectionName]], [[filename]]. Use the field tagger to include other dynamic tags. (e.g. [[page]] of [[total pages]])</inlineHelpText>
        <label>Stamp Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Style__c</fullName>
        <label>Style</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bold</fullName>
                </value>
                <value>
                    <fullName>Italic</fullName>
                </value>
                <value>
                    <fullName>Underline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Rectangle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__VAlign__c</fullName>
        <label>Vertical Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bottom</fullName>
                </value>
                <value>
                    <fullName>Top</fullName>
                </value>
                <value>
                    <fullName>Middle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__XOffset__c</fullName>
        <inlineHelpText>Offset from horizontal alignment in pixels. Positive numbers move the stamp right and negative numbers move the stamp left.</inlineHelpText>
        <label>Horizontal Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__YOffset__c</fullName>
        <inlineHelpText>Offset from vertical alignment in pixels. Positive numbers move the stamp up and negative numbers move the stamp down.</inlineHelpText>
        <label>Vertical Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PDF Stamp</label>
    <nameField>
        <label>PDF Stamp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDF Stamps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>